force-app/main/default/objects/Funding_Organisation__c/Funding_Organisation__c.object-meta.xml
<CustomObject>
    <label>Funding Organisation</label>
    <nameField>
        <displayFormat>FO-{0000000}</displayFormat>
        <label>Funding Organisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>