force-app/main/default/objects/Funding_Organisation__c/fields/Brief_summary_under_200_words__c.field-meta.xml
<CustomField>
    <fullName>Brief_summary_under_200_words__c</fullName>
    <label>Brief summary (under 200 words)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>