force-app/main/default/objects/Funding_Organisation__c/fields/Expected_decision_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_decision_date__c</fullName>
    <label>Expected decision date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>