force-app/main/default/objects/Funding_Organisation__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipLabel>Funding Organisations</relationshipLabel>
    <relationshipName>Funding_Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>