force-app/main/default/objects/Funding_Organisation__c/fields/Name_of_the_funding_organisation__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_funding_organisation__c</fullName>
    <label>Name of the funding organisation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>