force-app/main/default/objects/Funding_Organisation__c/validationRules/Brief_summary_under_200_words.validationRule-meta.xml
<ValidationRule>
    <fullName>Brief_summary_under_200_words</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(TRIM( Brief_summary_under_200_words__c ),&apos;^(\\S+\\s+){0,199}\\S+&apos;))</errorConditionFormula>
    <errorDisplayField>Brief_summary_under_200_words__c</errorDisplayField>
    <errorMessage>Brief summary under 200 words</errorMessage>
</ValidationRule>